[gd_scene load_steps=33 format=2]

[ext_resource path="res://assets/Fierce Tooth/01-Idle/Idle 01.png" type="Texture" id=1]
[ext_resource path="res://assets/Fierce Tooth/01-Idle/Idle 03.png" type="Texture" id=2]
[ext_resource path="res://assets/Fierce Tooth/01-Idle/Idle 04.png" type="Texture" id=3]
[ext_resource path="res://assets/Fierce Tooth/01-Idle/Idle 05.png" type="Texture" id=4]
[ext_resource path="res://assets/Fierce Tooth/01-Idle/Idle 02.png" type="Texture" id=5]
[ext_resource path="res://assets/Fierce Tooth/02-Run/Run 03.png" type="Texture" id=6]
[ext_resource path="res://assets/Fierce Tooth/01-Idle/Idle 06.png" type="Texture" id=7]
[ext_resource path="res://assets/Fierce Tooth/01-Idle/Idle 08.png" type="Texture" id=8]
[ext_resource path="res://assets/Fierce Tooth/01-Idle/Idle 07.png" type="Texture" id=9]
[ext_resource path="res://assets/Fierce Tooth/02-Run/Run 01.png" type="Texture" id=10]
[ext_resource path="res://assets/Fierce Tooth/02-Run/Run 02.png" type="Texture" id=11]
[ext_resource path="res://assets/Fierce Tooth/03-Jump/Jump 02.png" type="Texture" id=12]
[ext_resource path="res://assets/Fierce Tooth/03-Jump/Jump 03.png" type="Texture" id=13]
[ext_resource path="res://assets/Fierce Tooth/04-Fall/Fall 01.png" type="Texture" id=14]
[ext_resource path="res://assets/Fierce Tooth/02-Run/Run 05.png" type="Texture" id=15]
[ext_resource path="res://assets/Fierce Tooth/08-Hit/Hit 01.png" type="Texture" id=16]
[ext_resource path="res://assets/Fierce Tooth/02-Run/Run 06.png" type="Texture" id=17]
[ext_resource path="res://assets/Fierce Tooth/02-Run/Run 04.png" type="Texture" id=18]
[ext_resource path="res://assets/Fierce Tooth/08-Hit/Hit 02.png" type="Texture" id=19]
[ext_resource path="res://assets/Fierce Tooth/08-Hit/Hit 03.png" type="Texture" id=20]
[ext_resource path="res://assets/Fierce Tooth/08-Hit/Hit 04.png" type="Texture" id=21]
[ext_resource path="res://assets/Fierce Tooth/03-Jump/Jump 01.png" type="Texture" id=22]
[ext_resource path="res://karakter/Musuh.gd" type="Script" id=23]
[ext_resource path="res://assets/Fierce Tooth/10-Dead Ground/Dead Ground 04.png" type="Texture" id=24]
[ext_resource path="res://assets/Fierce Tooth/10-Dead Ground/Dead Ground 01.png" type="Texture" id=25]
[ext_resource path="res://assets/Fierce Tooth/10-Dead Ground/Dead Ground 02.png" type="Texture" id=26]
[ext_resource path="res://assets/Fierce Tooth/10-Dead Ground/Dead Ground 03.png" type="Texture" id=27]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": false,
"name": "terluka",
"speed": 12.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 24 ) ],
"loop": false,
"name": "mati",
"speed": 10.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 6 ), ExtResource( 18 ), ExtResource( 15 ), ExtResource( 17 ) ],
"loop": true,
"name": "lari",
"speed": 12.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": false,
"name": "lompat",
"speed": 12.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 8 ) ],
"loop": true,
"name": "diam",
"speed": 12.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": false,
"name": "jatuh",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 11 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12, 8 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9, 2 )

[sub_resource type="Animation" id=5]
resource_name = "menghilang"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hapus"
} ]
}

[node name="Musuh" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 19
script = ExtResource( 23 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "mati"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 2 )

[node name="Pivot" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="Pivot"]
position = Vector2( 17, 0 )
enabled = true
cast_to = Vector2( 0, 24 )
collision_mask = 2

[node name="DeteksiSamping" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeteksiSamping"]
position = Vector2( 0, 5 )
shape = SubResource( 3 )

[node name="DeteksiAtas" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeteksiAtas"]
position = Vector2( 0, -13 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/menghilang = SubResource( 5 )

[connection signal="body_entered" from="DeteksiSamping" to="." method="_on_DeteksiSamping_body_entered"]
[connection signal="body_entered" from="DeteksiAtas" to="." method="_on_DeteksiAtas_body_entered"]
